--- a/dissertation.bib
+++ b/dissertation.bib
@@ -5690,6 +5690,7 @@ CONCLUSIONS: These findings indicate that the emotional sequelae of puberty exte
   title = {Psych: {{Procedures}} for {{Psychological}}, {{Psychometric}}, and {{Personality Research}}},
   url = {https://CRAN.R-project.org/package=psych},
   date = {2017},
+  keywords = {_diss},
   author = {Revelle, William},
   organization = {Northwestern University},
   note = {R package version 1.7.8}
@@ -6844,6 +6845,121 @@ CONCLUSIONS: Computational approaches allow us to disentangle contributions of m
   keywords = {Mathematics / Probability & Statistics / General,Psychology / Research & Methodology,_diss,Computers / Mathematical & Statistical Software},
   author = {Gelman, Andrew and Carlin, John B. and Stern, Hal S. and Dunson, David B. and Vehtari, Aki and Rubin, Donald B.},
   eprinttype = {googlebooks}
+}
+
+@article{donohew2000,
+  langid = {english},
+  title = {Sensation Seeking, Impulsive Decision-Making, and Risky Sex: Implications for Risk-Taking and Design of Interventions},
+  volume = {28},
+  issn = {01918869},
+  url = {http://linkinghub.elsevier.com/retrieve/pii/S0191886999001580},
+  doi = {10.1016/S0191-8869(99)00158-0},
+  shorttitle = {Sensation Seeking, Impulsive Decision-Making, and Risky Sex},
+  abstract = {In an HIV prevention study, 2949 ninth-grade students in 17 high schools in two Midwestern U.S. cities were administered scales measuring sensation seeking and impulsive decision-making and their separate and combined relationships to a number of indicators of sexual risk-taking. Measures of sexual risk-taking included intentions to have sex, ever had sex, number of lifetime sexual partners, been pregnant or caused a pregnancy, used a condom, used marijuana, had unwanted sex when drunk, had unwanted sex under pressure, said no to sex, used alcohol or partner used alcohol before sex. Strong associations were observed between each of the measures and sexual risk-taking for most of the indicators. Strongest associations were found among sexually active students high on both sensation seeking and impulsive decision-making and weakest associations among students low on both measures. Implications for design of interventions in health campaigns are discussed. 7 2000 Elsevier Science Ltd. All rights reserved.},
+  number = {6},
+  journaltitle = {Personality and Individual Differences},
+  urldate = {2018-07-10},
+  date = {2000-06},
+  pages = {1079-1091},
+  author = {Donohew, Lewis and Zimmerman, Rick and Cupp, Pamela S and Novak, Scott and Colon, Susan and Abell, Ritta},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/JNDQQNXW/Donohew et al. - 2000 - Sensation seeking, impulsive decision-making, and .pdf}
+}
+
+@article{newcomb1991,
+  langid = {english},
+  title = {Influence of Sensation Seeking on General Deviance and Specific Problem Behaviors from Adolescence to Young Adulthood.},
+  volume = {61},
+  issn = {1939-1315, 0022-3514},
+  url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0022-3514.61.4.614},
+  doi = {10.1037/0022-3514.61.4.614},
+  number = {4},
+  journaltitle = {Journal of Personality and Social Psychology},
+  urldate = {2018-07-10},
+  date = {1991},
+  pages = {614-628},
+  author = {Newcomb, Michael D. and McGee, Linda},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/STYYZEL4/Newcomb and McGee - 1991 - Influence of sensation seeking on general deviance.pdf}
+}
+
+@article{vanouytsel2014,
+  langid = {english},
+  title = {Brief Report: {{The}} Association between Adolescents' Characteristics and Engagement in Sexting},
+  volume = {37},
+  issn = {01401971},
+  url = {http://linkinghub.elsevier.com/retrieve/pii/S0140197114001754},
+  doi = {10.1016/j.adolescence.2014.10.004},
+  shorttitle = {Brief Report},
+  abstract = {The potential emotional and legal consequences of adolescents' engagement in sending sexually explicit pictures through the internet or the mobile phone (i.e., sexting) have caused signiﬁcant concern about the behavior among practitioners and academics. The present study compares the characteristics of students who engage in sexting to those who do not. A survey among 1028 adolescents of 11 secondary schools in Belgium was administered. Logistic regression analyses suggest that sexting is signiﬁcantly linked with sensation seeking, experiential thinking styles and depression, while controlling for gender, age, family status and students' response to economic stress. The results are of importance to practitioners who could adapt their prevention and intervention campaigns to better reach this complex youth. Differences with the ﬁndings of previous studies highlight the importance of continuing research on sexting and the need to pay attention to the speciﬁc context in which adolescent sexting takes place.},
+  number = {8},
+  journaltitle = {Journal of Adolescence},
+  urldate = {2018-07-10},
+  date = {2014-12},
+  pages = {1387-1391},
+  author = {Van Ouytsel, Joris and Van Gool, Ellen and Ponnet, Koen and Walrave, Michel},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/3AELTVAM/Van Ouytsel et al. - 2014 - Brief report The association between adolescents'.pdf}
+}
+
+@article{collado2014,
+  langid = {english},
+  title = {Longitudinal Trajectories of Sensation Seeking, Risk Taking Propensity, and Impulsivity across Early to Middle Adolescence},
+  volume = {39},
+  issn = {03064603},
+  url = {http://linkinghub.elsevier.com/retrieve/pii/S0306460314000252},
+  doi = {10.1016/j.addbeh.2014.01.024},
+  abstract = {Adolescent substance use and abuse show associations with increases in disinhibitory constructs, including sensation seeking, risk taking propensity, and impulsivity. However, the longitudinal trajectories of these constructs from early to middle adolescence remain largely unknown. Thus, the current study examined these developmental trajectories in 277 adolescents (Mage = 11.00 at Wave 1), over ﬁve consecutive yearly waves. Controlling for age, Hierarchical Linear Modeling analyses showed that sensation seeking increased linearly, whereas risk taking propensity and impulsivity demonstrated curvilinear changes. Speciﬁcally, risk taking propensity increased in the ﬁrst four waves of assessment but did not evidence changes at the last assessment wave. Impulsivity, on the other hand peaked at wave four before subsequently declining. A comparison between females and males and Black and White adolescents suggested that these groups' trajectories were similar. Black adolescents' sensation seeking trajectory differed from adolescents who belonged to the “Other” racial group (i.e., adolescents who neither self-identiﬁed as Black or White). Generally, the study ﬁndings replicate and extend earlier work indicating that these risk factors increase across early adolescence and begin to level-off during middle adolescence. The importance of understanding the natural course of these core constructs is of great importance for directing future relevant prevention and intervention work.},
+  number = {11},
+  journaltitle = {Addictive Behaviors},
+  urldate = {2018-07-10},
+  date = {2014-11},
+  pages = {1580-1588},
+  author = {Collado, Anahi and Felton, Julia W. and MacPherson, Laura and Lejuez, C.W.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/7U624N7A/Collado et al. - 2014 - Longitudinal trajectories of sensation seeking, ri.pdf}
+}
+
+@article{mccabe2015,
+  langid = {english},
+  title = {Premeditation Moderates the Relation between Sensation Seeking and Risky Substance Use among Young Adults.},
+  volume = {29},
+  issn = {1939-1501, 0893-164X},
+  url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/adb0000075},
+  doi = {10.1037/adb0000075},
+  abstract = {Young adulthood is a peak period for externalizing behaviors such as substance abuse and antisocial conduct. Evidence from developmental neuroscience suggests that externalizing conduct within this time period may be associated with a “developmental asymmetry” characterized by an early peak in sensation seeking combined with a relatively immature impulse control system. Trait measures of impulsivity—sensation seeking and premeditation—are psychological manifestations of these respective systems, and multiple prior studies suggest that high sensation seeking and low premeditation independently confer risk for distinct forms of externalizing behaviors. The goal of the present study was to test this developmental asymmetry hypothesis, examining whether trait premeditation moderates the effect of sensation seeking on substance use and problems, aggression, and rule-breaking behavior. Using a cross-sectional sample of college-enrolled adults (n ϭ 491), we applied zero-inflated modeling strategies to examine the likelihood and level of risky externalizing behaviors. Results indicated that lower premeditation enhanced the effect of higher sensation seeking on higher levels of positive and negative alcohol consequences, more frequent drug use, and more problematic drug use, but was unrelated to individual differences in antisocial behaviors. Our findings indicate that the developmental asymmetry between sensation seeking and a lack of premeditation is a risk factor for individual differences in problematic substance use among young adults, and may be less applicable for antisocial behaviors among high functioning individuals.},
+  number = {3},
+  journaltitle = {Psychology of Addictive Behaviors},
+  urldate = {2018-07-10},
+  date = {2015},
+  pages = {753-765},
+  author = {McCabe, Connor J. and Louie, Kristine A. and King, Kevin M.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/E9H7V5UC/McCabe et al. - 2015 - Premeditation moderates the relation between sensa.pdf}
+}
+
+@book{wickham2017,
+  title = {Tidyverse: {{Easily Install}} and {{Load}} the '{{Tidyverse}}'},
+  url = {https://CRAN.R-project.org/package=tidyverse},
+  date = {2017},
+  keywords = {_diss},
+  author = {Wickham, Hadley},
+  note = {R package version 1.2.1}
+}
+
+@article{lakens2017,
+  langid = {english},
+  title = {Equivalence {{Tests}}: {{A Practical Primer}} for t {{Tests}}, {{Correlations}}, and {{Meta}}-{{Analyses}}},
+  volume = {8},
+  issn = {1948-5506},
+  url = {https://doi.org/10.1177/1948550617697177},
+  doi = {10.1177/1948550617697177},
+  shorttitle = {Equivalence {{Tests}}},
+  abstract = {Scientists should be able to provide support for the absence of a meaningful effect. Currently, researchers often incorrectly conclude an effect is absent based a nonsignificant result. A widely recommended approach within a frequentist framework is to test for equivalence. In equivalence tests, such as the two one-sided tests (TOST) procedure discussed in this article, an upper and lower equivalence bound is specified based on the smallest effect size of interest. The TOST procedure can be used to statistically reject the presence of effects large enough to be considered worthwhile. This practical primer with accompanying spreadsheet and R package enables psychologists to easily perform equivalence tests (and power analyses) by setting equivalence bounds based on standardized effect sizes and provides recommendations to prespecify equivalence bounds. Extending your statistical tool kit with equivalence tests is an easy way to improve your statistical and theoretical inferences.},
+  number = {4},
+  journaltitle = {Social Psychological and Personality Science},
+  shortjournal = {Social Psychological and Personality Science},
+  urldate = {2018-07-12},
+  date = {2017-05-01},
+  pages = {355-362},
+  keywords = {_diss},
+  author = {Lakens, Daniël},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/ZTDUNNS3/Lakens - 2017 - Equivalence Tests A Practical Primer for t Tests,.pdf}
 }
 
 
